[package]
name = "bevy-hello-a2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"

[profile.dev]
opt-level = 'z'      # 'z' tells Rust to aggressively optimize for small file size
debug = false        # No debug info
strip = true         # Strip all remaining symbols (this saves a massive amount of space)

[profile.dev.package."*"]
opt-level = 'z'      # Optimize all of Bevy's internal code for small size too
strip = true